# vision_artificial

./: .gitignore  README.md  dataset1.csv  dataset2.csv
codigos_clase/practica1/: PASO1-install-cuda-MANUAL.sh  PASO3-install-virtualenv-python-opencv.sh  PASO4-install-cuda-opencv.sh  install-adicional-software.sh
codigos_clase/practica2/CODIGO/C++/Debuxar_en_imaxes/: CMakeLists.txt  D_Circles.cpp  Debuxamos_texto.cpp
codigos_clase/practica2/CODIGO/NOTEBOOKS/: opencv_debuxar.ipynb
codigos_clase/practica3/C++/Filtrado/: CMakeLists.txt  filtrado-convolucion.cpp
codigos_clase/practica3/C++/Laplacina/: laplaciana.cpp
codigos_clase/practica3/NOTEBOOKS/: 3-Limiar.ipynb  6-FFT.ipynb
entrega2/: entrega.py  test_trackbar.py
entrega2/src/: CMakeLists.txt  entrega.cpp  entrega.py
entrega3/: algo.avi
entrega3/Monogenic/: LICENSE.txt  monogenic.py
entrega3/datatest/volumes_sinteticos/: vol1.mat  vol2.mat
entrega3/entrega/: BkofLoGabor.py  BkofMono.py  BkofMono3D.py
entrega3/entrega/logGabor/: BkofLoGabor.py
entrega3/logGabor2D/: logGabor2D.py
practica1/: PASO2_install-libs-for-opencv.sh  PASO4-install-opencv.sh
practica1/meu_proxecto_Cpp/: .LEME_EXPLICACION.md.swp  LEME_EXPLICACION.md
practica1/meu_proxecto_Cpp/include/: codigoMostra.hpp
practica1/meu_proxecto_Cpp/src/: CMakeLists.txt  codigoMostra.cpp
practica2/CODIGO/C++/Empezando_Imaxes/: CMakeLists.txt  Copiar_rexion_a_outra.cpp  Corta_unha_seccion_imaxe.cpp  Crea_novas_imaxes.cpp  Crea_unha_Imaxemascara.cpp
practica2/CODIGO/C++/EspazosCor/: CMakeLists.txt  LabColor.cpp
practica2/CODIGO/C++/VideoIO/: CMakeLists.txt  EscribirVideo.cpp  LerVideo.cpp
practica3/C++/Limiares/: CMakeLists.txt  Limiar.cpp
practica3/C++/Op_bit/: CMakeLists.txt
practica3/Monogenic/: README.txt  synthetic.py
practica3/NOTEBOOKS/: 2-Operacion_binarias.ipynb
practica3/NOTEBOOKS/.ipynb_checkpoints/: 11_image-smoothing-gaussian-blur-checkpoint.ipynb  1_Thresholding-checkpoint.ipynb
practica3/PYTHON/Laplaciana/: laplaciana.py
practica3/PYTHON/Op_bin/: Realce_Brillo.py  Solucion_final.py
practica3/PYTHON/Suavizado/: medianaSuavizado.py
practica3/PYTHON/histogramas/: eq_hist_gris.py
practica3/datatest/videos/: SCD_circulos_1sentido_contrario.avi  SCE_circulos_girando_3.avi
practica3/entrega/: BkofLoGabor.py  BkofMono.py  BkofMono3D.py
practica3/logGabor2D/: NormalizeIter.py
practica3/logGabor2D/CongruenciaFase/: CongFaseLogG.py
practica5/Eval_saliencia/dataset_Toronto/: Visualiza_fixacions.py
practica5/Saliencia_Python/ResiduoEspectral/: superpos_mapa.py
practica5/entrega/: metricas_eval_sal.py  resspectral_mod.py  saliencia_gaussiana.py
practica5/imaxes_e_videos_proba/videos/: SCE_bur_11_girando.avi
practica6/ClasificadoresBy/: dataset1.csv
practica6/entrega/: algo.csv  clasificador.py  funcion.py  imgPreprpc.py  main.py  saveDesc.py
practica6/planeDataset/: algo.csv  genData.py
(+103 files in other folders)
